src/Game.css
body {
  font: 14px "Century Gothic", Futura, sans-serif;
  margin: 20px;
  margin-bottom:20px;
}

ol, ul {
  padding-left: 30px;
}

.board-row:after {
  clear: both;
  content: "";
  display: table;
}

.status {
  margin-bottom: 10px;
}

.copyright {
		  position:fixed;
		  height: 20px;
		  background-color: #fbc4c4;
		  bottom: 0px;
		  left: 0px;
		  right: 0px;
		  margin-bottom: 0px;
		  padding-left:20px;
}

.card {
  border: 1px solid #999;
  float: left;
  font-size: 12px;
  height: 120px;
  margin-right: 10px;
  margin-top: 10px;
  padding: 0;
  text-align: center;
  width: 90px;
  border-radius: 5px;
  -webkit-box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
  box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
}

.card-front img {
  display:block;		  
  margin : auto;
  height: 64px;
  width: 64px;
}

.card-front {
  background: #fff;
}
.card-back{
  background: #cc3e3e;
}

.card:focus {
  outline: none;
}

.kbd-navigation .card:focus {
  background: #ddd;
}

.game {
  /*display: flex;*/
  flex-direction: row;
  display: block;
}

.game-info {
  margin-left: 0px;
  margin-bottom: 10px;
  display:inline-flex;
  line-height: 40px;
}

button, button:active, button:focus {
		  outline: 0;
		  outline: none !important;
	}

	button::-moz-focus-inner {
			  border: 0;
	}

.reset-btn {
		  border: 0px;
		  background: #960303;
		  padding: 4px 10px;
		  border-radius: 10px;
		  color: white;
		  font-size: 14px;
		  vertical-align: middle;
		  margin-right:10px;
}

.reset-btn:hover {
		  background: #4f010b;
}

/* ----Card flip voodoo below---- */

/* entire container, keeps perspective */
.flip-container {
		  perspective: 1000px;
		  float: left;
		  height: 120px;
		  margin-right: 10px;
		  margin-top: 10px;
		  width: 90px;
}
/* flip the pane when hovered */
.flip-container.visible .flipper {
		  transform: rotateY(180deg);
}

.flip-container, .front, .back {
		  width: 90px;
		  height: 120px;
}

/* flip speed goes here */
.flipper {
		  transition: 0.6s;
		  transform-style: preserve-3d;

		  position: relative;
}

/* hide back of pane during swap */
.front, .back {
		  backface-visibility: hidden;

		  position: absolute;
		  top: 0;
		  left: 0;
}

/* front pane, placed above back */
.back {
		  z-index: 2;
		  /* for firefox 31 */
		  transform: rotateY(0deg);
}

/* back, initially hidden pane */
.front {
		  transform: rotateY(180deg);
}

